--- a/Product.html
+++ b/Product.html
@@ -25,13 +25,13 @@
                     <a class="nav-link active" aria-current="page" href="Home.html" id="Home">Home</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="#">About us</a>
+                    <a class="nav-link" href="#">Features</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="#">Services</a>
+                    <a class="nav-link" href="#">Pricing</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="">Portfolio</a>
+                    <a class="nav-link" href="">Our cars</a>
                   </li>
                   <li class="nav-item">
                     <a class="nav-link" href="#">Team</a>
@@ -41,7 +41,7 @@
                       Dropdown link
                     </a>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Content</a>
+                        <a class="nav-link" href="#" onclick="myFunction()">Services</a>
                       </li>
                     <button type="button" class="btn-danger" id="Get" style="border-color: white;">Get Start</button>
                     <ul class="dropdown-menu">
@@ -80,10 +80,10 @@
           </nav>
     </section> 
     <!--#Navigation bar 2-->
-    <section>
+     <section>
         <div class="grid-container">
-            <div class="img"><img src="./images/large.gif" alt="car" width="900px"><p style="font-size: 50px; color: red; margin-left: 370px;">ooooo</p></div>
-            <div class="phara">
+          <div class="img"><img src="./images/large.gif" alt="car" width="900px"><p style="font-size: 50px; color: red; margin-left: 370px;">ooooo</p></div>
+              <div class="phara">
                 <div class="card bg-dark mb-3" style="max-width: 30rem; height: 20rem; border-color: aliceblue;">
                     <div class="card-header" style="color: white;">Project information</div>
                     <div class="card-body;" style="color: white;">
@@ -108,7 +108,7 @@
             <h1>The Dodge Challenger Hellcat</h1>
             <p>The Dodge Challenger Hellcat is a high-performance version of the Dodge Challenger muscle car. It is powered by a supercharged 6.2-liter V8 engine that produces 717 horsepower and 650 lb-ft of torque. The car features a unique design with a distinctive front fascia and hood, as well as a high-performance suspension and braking system. Other features include a sport-tuned exhaust, 20-inch wheels, and a variety of interior and exterior appearance packages. The Hellcat is capable of accelerating from 0 to 60 mph in just 3.6 seconds and has a top speed of 199 mph.</p>
         </div>
-    </section>
+    </section> 
     <section>
       <div class="grid-container4">
         <div class="grid-item4">
@@ -163,5 +163,6 @@
 
 
 <script src="bootstrap/js/bootstrap.bundle.min.js"></script> 
+<script src="./Product.js"></script>
 </body>
 </html>
