--- a/Home.html
+++ b/Home.html
@@ -29,7 +29,7 @@
                 <a class="nav-link" href="#">Pricing</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">Content</a>
+                <a class="nav-link" href="map.html">Contact</a>
               </li>
               <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
@@ -42,7 +42,6 @@
                 </ul>
               </li>
             </ul>
-            <!-- <button type="button" onclick="red()" class="btn btn-danger" id="butt">START</button> -->
             <button type="button" class="button" id="primary">Started</button>
           </div>
         </div>
@@ -80,52 +79,15 @@
   </div>
 <!--section 3-->
 <section>
-<div class="gallery">
+
+<div>
 <div class="portpolio">
 <p style="font-size: 30px; font-weight: 1000; margin-left: 140px;">DODGE</p>
 <p style="font-size: 40px; font-weight: 1000;">Check Out Our Cars</p>
 <button type="button" class="btn btn-danger" style="height: 10px; margin-left: 150px;">.................</button>
 </div>
-<!--image gallery bootstrape-->
-<!-- <div>
-<nav class="navbar navbar-expand-lg navbar-light" id="cnav">
-  <div class="container-fluid" style="margin-left: 850px;">
-   <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="navbarNav">
-      <ul class="navbar-nav">
-        <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="#">Home</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">Features</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">Pricing</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
-        </li>
-      </ul>
-    </div>
-  </div>
-</nav>
-</div>
 
-<div class="grid-container">
-  <div class="grid-item"><img src="./images/1.jpg" alt="car" style="height: 330px; width: 600px;" id="car"></div>
-  <div class="grid-item"><img src="./images/2.jpg" alt="car" style="height: 330px; width: 600px;" id="car"></div>
-  <div class="grid-item"><a href="Product.html"><img src="./images/3.jpg" alt="car" style="height: 330px; width: 600px;" id="car"></a></div>  
-  <div class="grid-item"><img src="./images/new1.jpg" alt="car" style="height: 330px; width: 600px;" id="car"></div>
-  <div class="grid-item"><img src="./images/6.jpg" alt="car" style="height: 330px; width: 600px;" id="car"></div>
-  <div class="grid-item"><img src="./images/new2.jpg" alt="car" style="height: 330px; width: 600px;" id="car"></div>  
-  <div class="grid-item"><img src="./images/8.jpg" alt="car" style="height: 330px; width: 600px;" id="car"></div>
-  <div class="grid-item"><img src="./images/5.jpg" alt="car" style="height: 330px; width: 600px;" id="car"></div>
-  <div class="grid-item"><img src="./images/new5.jpg" alt="car" style="height: 330px; width: 600px;" id="car"></div>  
-</div> -->
-
-<!------------------------------------------------------------------------------------------------------------------------------>
+<!---------------IMAGE GALLERY START------------------------------------------->
 <section class="gallery">
   <div class="buttons">
      <button type="button">
@@ -189,7 +151,7 @@
   <p style="font-size: 30px; font-weight: 1000; margin-left: 140px;">DODGE</p>
   <p style="font-size: 40px; font-weight: 1000;">Check Out Our Team</p>
   <button type="button" class="btn btn-danger" style="height: 10px; margin-left: 150px;">.................</button>
-  </div>
+</div>
 
   <div class="container">
     <div class="row">
@@ -197,7 +159,7 @@
       <div class="col"><img src="./images/o2.jpg" alt="" style="height: 200px; width: 300px;"></div>
       <div class="col"><img src="./images/o3.jpg" alt="" style="height: 200px; width: 300px;"></div>
       <div class="col"><img src="./images/o4.jpg" alt="" style="height: 200px; width: 300px;"></div>
-    </div>
+  </div>
 <!--team photos-->
 <div class="p">
   <div class="portpolio">
@@ -207,11 +169,14 @@
   </div>
 
 <div class="grid-containe">
-  <div><img src="./images/chevy.jpeg" alt="" style="height: 150px; width: 300px;"></div>
+  <div>
+    <img id="image1" />
+</div>
+  <!-- <div><img src="./images/chevy.jpeg" alt="" style="height: 150px; width: 300px;"></div>
   <div><img src="./images/ford.png" alt="" style="height: 250px; width: 300px;"></div>
   <div><img src="./images/dod.jpg" alt="" style="height: 250px; width: 500px;"></div>  
   <div><img src="./images/gm.jpg" alt="" style="height: 150px; width: 300px;"></div><br>
-  <div id="radio"><p>oooooo</p></div>
+  <div id="radio"><p>oooooo</p></div> -->
 </div>
 <!--logos-->
 <section>
